package ar.edu.utn.frba.dds.qmp4;

public interface ServicioMeteorologico {
 	EstadoDelTiempo obtenerCondicionesClimaticas(String direccion);
}
